--- a/app/scheduler/scheduler-home.html
+++ b/app/scheduler/scheduler-home.html
@@ -27,12 +27,12 @@
                     <span>Observation Schedules Overview</span></div>
             </md-button>
 
-            <md-button class="scheduler-nav-home-item md-primary md-raised" flex ng-click="vm.stateGo('scheduler.execute')">
-                <div layout="column">
-                    <div flex style="font-size: 148px" ><span flex class="fa fa-tasks"></span></div>
-                    <!--<div ng-include="'images/scheduleblocks.svg'" onload="vm.svgLoaded('#subarrays-img-target-color')"></div>-->
-                    <span>Manage Schedule Blocks</span></div>
-            </md-button>
+            <!--<md-button class="scheduler-nav-home-item md-primary md-raised" flex ng-click="vm.stateGo('scheduler.execute')">-->
+                <!--<div layout="column">-->
+                    <!--<div flex style="font-size: 148px" ><span flex class="fa fa-tasks"></span></div>-->
+                    <!--&lt;!&ndash;<div ng-include="'images/scheduleblocks.svg'" onload="vm.svgLoaded('#subarrays-img-target-color')"></div>&ndash;&gt;-->
+                    <!--<span>Manage Schedule Blocks</span></div>-->
+            <!--</md-button>-->
         </div>
     </md-content>
 
