--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -11,7 +11,10 @@
                     </div>
                 </md-toolbar>
                 <div layout="column" layout-align="center center" style="margin: 4px; height: 220px;">
-                    <div ng-include="'images/subarray.svg'"></div>
+                    <md-button md-theme="{{themePrimaryButtons}}" class="" layout="column" layout-align="center center" ng-click="vm.navigateToSchedulerDetails(subarray.id)">
+                        <div style="transform:scale(0.7);" ng-include="'images/subarray.svg'"></div>
+                        <span>Manage Observations</span>
+                    </md-button>
                     <span style="font-weight: bold" ng-if="subarray.description">{{::subarray.description}}</span>
                     <span ng-if="!subarray.in_maintenance">{{subarray.state}}</span>
                     <span ng-if="subarray.in_maintenance">{{subarray.state}} - in maintenance</span>
