--- a/app/config/config.html
+++ b/app/config/config.html
@@ -13,6 +13,7 @@
             </div>
             <div class="config-div-item" style="border: 0">
                 <md-subheader>Alarms</md-subheader>
+                <md-checkbox ng-class="{ 'white-text': themePrimary === 'light-blue-dark'}" class="alarms-tools-checkbox" ng-model="vm.showAlarms" aria-label="Show Alarm Notifications">Show Alarm Notifications</md-checkbox>
                 <md-checkbox ng-class="{ 'white-text': themePrimary === 'light-blue-dark'}" class="alarms-tools-checkbox" ng-model="vm.showLargeAlarms" aria-label="Show Detailed Alarm Notifications">Show Detailed Alarm Notifications</md-checkbox>
             </div>
 
